Fix bind errors (update echo to v4)
